<resources>
    <string name="app_name">Ejercicios Desafio Practico</string>
    <string name="text1">Calculadora de Promedios</string>
    <string name="lblEstudiante">Nombre Estudiante</string>
    <string name="lblNota1" formatted="false">Nota 1 (10%)</string>
    <string name="lblNota2" formatted="false">Nota 2 (15%)</string>
    <string name="lblNota3" formatted="false">Nota 3 (20%)</string>
    <string name="lblNota4" formatted="false">Nota 4 (25%)</string>
    <string name="lblNota5" formatted="false">Nota 5 (30%)</string>
    <string name="btnVolver">Volver A vista principal</string>
    <string name="text3">Calcular Promedio</string>
    <string name="lblNotNull">Este campo no puede estar vacio</string>
    <string name="lblcondicion">La nota debe estar entre 0.0 y 10.0</string>
    <string name="lblAprobado">Aprobado</string>
    <string name="lblReprobado">Reprobado</string>
    <string name="lblResultado0">El Resultado aparecera Justo Aqui</string>
    <string name="lblResultado1">El estudiante</string>
    <string name="lblResultado2">obtuvo un promedio de</string>
    <string name="lblResultado3">y se encuentra</string>
    <string name="lbltext4">Resultados</string>
    <string name="SalarioTitulo">Calculadora de salarios de empleado</string>
    <string name="title_activity_promedio">PromedioActivity</string>
    <string name="errCampoVacio">Error el campo esta vacio por favor ingresa un nombre</string>
    <string name="errNotaNoValida">Nota no valida</string>
    <string name="titleSalario">Calculo de salario</string>
    <string name="lblNombreEmpleado">Nombre del empleado</string>
    <string name="lblSalarioBase">Salrio base ($)</string>
    <string name="btnCalcularSalario">Calcular descuentos</string>
    <string name="errSalarioInvalido">El salrio debe ser un numero positivo o mayor a 0</string>
    <string name="lblTituloDesglose">Desglose Salarial</string>
    <string name="lblResEmpleado">Empleado: </string>
    <string name="lblResBruto">Salario Bruto: </string>
    <string name="lblResIsss" formatted="false">Descuento ISSS (3%): -$</string>
    <string name="lblResAfp" formatted="false">Descuento AFP (7.25%): -$</string>
    <string name="lblResRenta">Retencion Renta -$</string>
    <string name="lblResTotalDescuentos">Toal Descuentos: -$</string>
    <string name="lblResNeto">Salario Neto a pagar: $</string>

    <string name="titleCalculadora">Calculadora</string>
    <string name="lblNumero1">Numero 1 (O Radiando)</string>
    <string name="lblNumero2">Numero 2 (O exponente)</string>
    <string name="btnCalcularOperacion">Calcular</string>
    <string name="btnGuardarHistorial">Historial</string>
    <string name="btnExportarDescargas">Exportar a Descargas</string>
    <string name="lblResultadoCalc">Resultado: </string>
    <string name="lblHistorialTitulo">Historial de Operaciones:</string>
    <string name="errNumeroVacio">Por favor ingresa un numero</string>
    <string name="errDivisionCero">Error: No se puede dividir entre cero</string>
    <string name="errRaizNegativa">Error: No existe raiz cuadrada real de un negativo</string>
    <string name="errExportar">Error al exportar el archivo</string>
    <string name="msgExportadoOk">Historial exportado con exito a carpeta de descargas</string>

    <string-array name="operaciones">
        <item>Suma</item>
        <item>Resta</item>
        <item>Multilicacion</item>
        <item>Division</item>
        <item>Exponente</item>
        <item>Raiz Cuadrada</item>

    </string-array>
</resources>