<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnColor"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_screen"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SalarioTitulo"
                android:textAlignment="center"
                android:background="@drawable/border_radius"
                android:padding="@dimen/padding_screen"
                android:textColor="@color/btnColor"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_component"
                />
            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_component"
                android:backgroundTint="@color/TextColor"
                android:text="@string/btnVolver"
                android:textColor="@color/btnColor"
                android:layout_margin="@dimen/margin_component"
                />

            <EditText
                android:id="@+id/etNombreEmpleado"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_margin="@dimen/margin_component"
                android:layout_marginTop="@dimen/margin_top_section"
                android:hint="@string/lblNombreEmpleado"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/TextColor"
                android:textColorHint="@color/TextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSalarioBase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_component"
                android:hint="@string/lblSalarioBase"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/TextColor"
                android:textColorHint="@color/TextColor"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_component"
                android:backgroundTint="@color/TextColor"

                android:text="@string/btnCalcularSalario"
                android:textColor="@color/btnColor" />

            <LinearLayout
                android:id="@+id/layoutResultados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_section"
                android:layout_marginBottom="@dimen/margin_top_section"
                android:background="@drawable/border_radius2"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="@dimen/padding_card">

                <TextView
                    android:id="@+id/tvTituloDesglose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTituloDesglose"
                    android:textAlignment="center"
                    android:textColor="@color/color0"
                    android:layout_marginTop="@dimen/margin_component"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResEmpleado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_component"
                    android:text="@string/lblResEmpleado"
                    android:textColor="@color/color1"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResSalarioBruto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_component"
                    android:text="@string/lblResBruto"
                    android:textColor="@color/color2"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResISSS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblResIsss"
                    android:textColor="@color/color3"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResAFP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblResAfp"
                    android:textColor="@color/color4"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResRenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblResRenta"
                    android:textColor="@color/color5"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResTotalDescuentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lblResTotalDescuentos"
                    android:textColor="@color/color6"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvResSalarioNeto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_component"
                    android:text="@string/lblResNeto"
                    android:textColor="@color/Textresult"
                    android:textSize="@dimen/text_size_result"
                    android:textStyle="bold" />

            </LinearLayout>


            </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>