<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundResult">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >


            <TextView
                android:id="@+id/tvTituloCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleCalculadora"
                android:textAlignment="center"
                android:lineSpacingExtra="14sp"
                android:paddingTop="200px"
                android:paddingBottom="90px"
                android:background="@drawable/border_radius3"
                android:textColor="@color/color0"
                android:textSize="@dimen/text_size_title"

                android:textStyle="bold" />


            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="@dimen/margin_component"
                android:layout_marginTop="@dimen/margin_component"
                android:backgroundTint="@color/TextColor"
                android:text="@string/btnVolver"
                android:textColor="@color/btnColor"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etNumero1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_top_section"
                android:hint="@string/lblNumero1"
                android:inputType="numberSigned|numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/color4"
                android:textColorHint="@color/color4"
                android:layout_margin="@dimen/margin_component"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etNumero2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_component"
                android:hint="@string/lblNumero2"
                android:inputType="numberSigned|numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/color5"
                android:textColorHint="@color/color5"
                android:layout_margin="@dimen/margin_component"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_section"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnSumar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color1"
                    app:icon="@drawable/suma"
                    android:layout_margin="@dimen/margin_component"
                    app:iconGravity="textStart" />

                <Button
                    android:id="@+id/btnRestar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color2"
                    app:icon="@drawable/minus_svgrepo_com"
                    android:layout_margin="@dimen/margin_component"
                    app:iconGravity="textStart" />

                <Button
                    android:id="@+id/btnMultiplicar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color3"
                    app:icon="@drawable/multiply_1_svgrepo_com"
                    android:layout_margin="@dimen/margin_component"
                    app:iconGravity="textStart" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnDividir"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="@dimen/margin_component"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color6"
                    android:text="/"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnPotencia"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="@dimen/margin_component"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color6"
                    android:text="xʸ"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnRaiz"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="@dimen/margin_component"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color6"
                    android:text="√"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_section"
                android:background="@drawable/border_radius3"
                android:elevation="2dp"
                android:padding="@dimen/padding_card"
                android:text="@string/lblResultadoCalc"
                android:textAlignment="center"
                android:textColor="@color/color0"
                android:textSize="@dimen/text_size_result"
                android:layout_margin="@dimen/margin_component"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component"
                android:orientation="horizontal"

                android:weightSum="2">

                <Button
                    android:id="@+id/btnVerHistorial"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="@dimen/margin_top_section"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color6"
                    android:text="@string/btnGuardarHistorial"

                    android:textColor="@color/btnColor"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnExportarDescargas"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="@dimen/margin_top_section"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color6"
                    android:text="@string/btnExportarDescargas"
                    android:textColor="@color/color0"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvHistorialContenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_component"
                android:layout_marginTop="@dimen/margin_component"
                android:layout_marginBottom="@dimen/margin_top_section"
                android:background="@drawable/border_radius3"
                android:padding="@dimen/padding_card"
                android:text="@string/lblHistorialTitulo"
                android:textColor="@color/color0"
                android:textSize="@dimen/text_size_body"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>